force-app/main/default/objects/Related_Client_Case__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Created for 03373940</description>
        <formula>Related_Case__r.Account_Name_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audit_Days_from_Now__c</fullName>
        <description>Created for 03373940</description>
        <formula>Related_Case__r.AuditDaysfromNow__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Audit: Days from Now*</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Audit_SLA__c</fullName>
        <description>Created for 03373940</description>
        <formula>Related_Case__r.AuditSLA2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Audit: SLA*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Avetta_ID__c</fullName>
        <description>Created for 03373940</description>
        <formula>Related_Case__r.Organizer_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avetta ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Account_status__c</fullName>
        <description>Related Case Account status</description>
        <formula>TEXT(Related_Case__r.Account.Status__c)</formula>
        <label>Case Account status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Country__c</fullName>
        <description>Related Case Country</description>
        <formula>Related_Case__r.Country__c</formula>
        <label>Case Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <description>Related case Status</description>
        <formula>Text(Related_Case__r.Status)</formula>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <description>Related Case Type</description>
        <formula>TEXT(Related_Case__r.Type)</formula>
        <label>Case Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden__c</fullName>
        <description>Created for 03373940</description>
        <formula>Related_Case__r.HiddenForm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Created for 03373940</description>
        <formula>TEXT(Related_Case__r.Priority)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Case__c</fullName>
        <description>Related Case list</description>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Related_Clients</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_Client__c</fullName>
        <description>Related Client Account</description>
        <label>Related Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Related_Clients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Renewal_Audit__c</fullName>
        <description>Created for 03373940</description>
        <formula>Related_Case__r.Renewal_Audit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Small_Business__c</fullName>
        <description>Created for 03373940</description>
        <formula>Related_Case__r.Small_Business_c__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Small Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sole_Owner__c</fullName>
        <description>Created for 03373940</description>
        <formula>Related_Case__r.Sole_Owner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sole Owner</label>
        <type>Checkbox</type>
    </fields>
    <label>Related Client Case</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Related_Client__c</columns>
        <columns>Related_Case__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Related_Client__c</field>
            <operation>equals</operation>
            <value>Arkema Corporate</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Audit_Cases_by_Client</fullName>
        <columns>Related_Case__c</columns>
        <columns>Related_Client__c</columns>
        <columns>Case_Status__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Related_Client__c</field>
            <operation>contains</operation>
            <value>Lafarge,BASF</value>
        </filters>
        <filters>
            <field>Case_Country__c</field>
            <operation>equals</operation>
            <value>US</value>
        </filters>
        <filters>
            <field>Case_Status__c</field>
            <operation>notContain</operation>
            <value>Pending,Waiting on Supplier,Closed</value>
        </filters>
        <label>Audit Cases by Client</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Global_Manager_HSE_Assessment_Services</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Related_Clients</fullName>
        <columns>NAME</columns>
        <columns>Related_Case__c</columns>
        <columns>Related_Client__c</columns>
        <filterScope>Everything</filterScope>
        <label>Related Clients</label>
    </listViews>
    <nameField>
        <displayFormat>RC-{0000000}</displayFormat>
        <label>Related Client Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Client Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>